<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myHavelock</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">In order to access your portfolio data, myHavelock needs an API key from HavelockInvestments.com.\n\nTap the screen to open the myHavelock Configuration for instructions on how to create and save an API key.</string>
    <string name="portfolio_connection_error">Your portfolio data could not be retreived from HavelockInvestments.com. Please check your internet connectivity and try again.</string>
    <string name="trades_connection_error">Trade history data could not be retreived from HavelockInvestments.com. Please check your internet connectivity and try again.</string>
    <string name="apikey_error">Your API key appears to be invalid. Please confirm your API key in the myHavelock Configuration section and try again.</string>
    <string name="loading_portfolio">Loading your portfolio…</string>
    <string name="loading_trades">Loading trade history…</string>
    <string name="loading_more_trades">Loading more trade history…</string>
    <string name="no_api_portfolio_access">The Havelock API key you have provided does not have access to your portfolio information.\n\nPlease grant portfolio access permission to your API key, as described in the myHavelock Configuration section, and try again.</string>
    <string name="alert">Alert</string>
    <string name="refreshing_portfolio">Refreshing your portfolio…</string>
    <string name="refresh">Refresh</string>
    <string name="configure">Configure</string>
    <string name="about">About</string>
    <string name="about_myhavelock">Monitor the performance and status of your Havelock Investments portfolio by providing myHavelock with an API key from your HavelockInvestments.com account. This application only reads information about the funds in your Havelock Investments portfolio.</string>
    <string name="disclaimer">Disclaimer: myHavelock is in no way endorsed by or affiliated with Havelock Investments or The Panama Fund, S.A.</string>
    <string name="empty_portfolio_alert">Your portfolio appears to be empty. Once you\'ve purchased shares of any fund on HavelockInvestments.com they will appear right here in myHavelock!</string>
    <string name="no_funds">No Funds</string>
    <string name="title_activity_details">Fund Details</string>
    <string name="title_activity_chart">Fund History</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_config">Configure myHavelock</string>
    <string name="chart_header">30 Day Price and Volume History</string>
    <string name="fund_name_placeholder">{FUND NAME}</string>
    <string name="quantity">Quantity</string>
    <string name="book">Book</string>
    <string name="market">Market</string>
    <string name="trade_history_heading">24hr Trade History</string>
    <string name="symbol_placeholder">{SYM}</string>
    <string name="performance_charts">30day Performance Charts</string>
    <string name="alert_icon">Alert Icon</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="chart_icon">Chart Icon</string>
    <string name="fund_performance_indicator">Fund Performance Indicator</string>
    <string name="divider">Divider</string>
    <string name="no_trades">No Trades</string>
    <string name="no_trades_found_for_last_24hrs">No trades found for last 24hrs!</string>
    
</resources>
